--- a/feed.html
+++ b/feed.html
@@ -17,10 +17,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Feed</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=443350757"/>
-  <link rel="stylesheet" type="text/css" href="css/feed.css?crc=4284511933" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/feed.css?crc=3976520990" id="pagesheet"/>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/6Iz3ay6B9kZbnoNIZMXPJJrUP-NyRvXxX3M4zOmQ0RJfeCIgfFRZU3wPH2SXFRjkw2gLZR6XjR6XjhFK5Q88Z2iqwDwtFDF8wABywDwkF2MUjD6-mKG0Sh8ljAN0dhiuZA8kjQI3wPo1-WsGiAJ0-AvCSh8ljAN0dhiuZA8kjQI3wPo1-WsGiAJ0-AvCiaiaO1FTdABzdcN1iAmTScIUw2I0Zh8X-YmKOc8zJ6TliWF8dkuDjAoDH6qJhbvbMg6YJMJ7fbRQ2UMMeMI6MKG4fFbVIMMjfkMfP6sFiWF8qMYt6j_Jgb.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//use.typekit.net/ik/rMNjZmMVQLtoJs6-Xq96_vVMHHmApaBcdGai9TF6ByJfeCIgfFRZU3wPH2SXFRjkw2gLZR6XjR6XjhFK5Q88Z2iqwDwtFDF8wABywDwkF2MUjD6-mKG0Sh8ljAN0dhiuZA8kjQI3wPo1-WsGiAJ0-AvCSh8ljAN0dhiuZA8kjQI3wPo1-WsGiAJ0-AvCiaiaO1FTdABzdcN1iAmTScIUw2I0Zh8X-YmKOc8zJ6TliWF8dkuDjAoDH6qJhbvbMg6YJMJ7fbRQ2UMMeMI6MKG4fFbVIMMjfkMfP6sFiWF8qMeZyJ_Jgb.js" type="text/javascript">\x3C/script>');
 </script>
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -114,7 +114,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <div class="clearfix grpelem" id="pu776"><!-- column -->
           <div class="rounded-corners clearfix colelem" id="u776"><!-- column -->
            <div class="rounded-corners clearfix colelem" id="u1452"><!-- group -->
-            <img class="grpelem" id="u1453-4" alt="Quando acaba o papel higiénico..." src="images/u1453-4.png?crc=4198425665" data-image-width="246"/><!-- rasterized frame -->
+            <a class="nonblock nontext grpelem" id="u1453-4" href="feed-copy.html"><!-- rasterized frame --><img id="u1453-4_img" alt="Quando acaba o papel higiénico..." src="images/u1453-4.png?crc=4198425665" data-image-width="246"/></a>
            </div>
            <img class="colelem" id="u1458-4" alt="miguelangelo" src="images/u1458-4.png?crc=308851531" data-image-width="108"/><!-- rasterized frame -->
            <div class="clip_frame colelem" id="u1461"><!-- svg -->
